--- a/app/app.html
+++ b/app/app.html
@@ -8,8 +8,9 @@
     <base href="/">
     <title page-title></title>
     <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&lang=en' rel='stylesheet' type='text/css'>
 
-    <!-- build:css(.) styles/vendor.css -->
+    <!-- build:css({.tmp,app}) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="../bower_components/angular-notify/dist/angular-notify.min.css" />
     <link rel="stylesheet" href="../bower_components/fontawesome/css/font-awesome.css" />
@@ -78,7 +79,7 @@
 
 </body>
 
-<!-- build:js(.) scripts/vendor.js -->
+<!-- build:js({.tmp,app}) scripts/vendor.js -->
 <script src="../bower_components/jquery/dist/jquery.min.js"></script>
 <script src="../bower_components/angular/angular.min.js"></script>
 <script src="../bower_components/stacktrace-js/dist/stacktrace.min.js"></script>
