--- a/app/app.html
+++ b/app/app.html
@@ -103,6 +103,7 @@
 <script src="../bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
 <script src="../bower_components/angulartics/dist/angulartics.min.js"></script>
 <script src="../bower_components/angulartics-google-analytics/dist/angulartics-google-analytics.min.js"></script>
+<script src="angular-knowtify.js"></script>
 <!-- endbuild -->
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
