--- a/app/app.html
+++ b/app/app.html
@@ -54,17 +54,7 @@
     <!-- Page view wrapper -->
     <div ui-view></div>
 
-<script>
-    var _knowtify = _knowtify || [];
-    var _knowtifyInbox = _knowtifyInbox || [];
-    _knowtify.public_token = "697926551ec864a9c587bafbfa318beb";
-
-    (function(d,s,t,u){var j = d.createElement(s);var p = d.getElementsByTagName(s)[0];
-        j.type = t;j.async = true;j.src = u;p.parentNode.insertBefore(j, p);})(document,'script','text/javascript', 'http://js.knowtify.io/knowtify.js');
-</script>
-
-
-<script>
+<script type="text/javascript">
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -72,6 +62,15 @@
 
     ga('create', 'UA-58555092-2', 'auto');
 
+</script>
+
+<script type="text/javascript">
+    var _knowtify = _knowtify || [];
+    var _knowtifyInbox = _knowtifyInbox || [];
+    _knowtify.public_token = "697926551ec864a9c587bafbfa318beb";
+
+    (function(d,s,t,u){var j = d.createElement(s);var p = d.getElementsByTagName(s)[0];
+        j.type = t;j.async = true;j.src = u;p.parentNode.insertBefore(j, p);})(document,'script','text/javascript', 'https://s3.amazonaws.com/js.knowtify.io/knowtify.js');
 </script>
 
 </body>
